--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <h1> oio oio ioi oi oi </h1>
     <script src="main.js" type="module"></script>
   </body>
 </html>
