--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jogo da Memória</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/login.css">
+    <script defer src="./js/login.js"></script>
 
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/login.css">
-
-  <script defer src="./js/login.js"></script>
-
-  <title>Memory Game | Login</title>
 </head>
 <body>
-  
-  <form class="login-form">
 
-    <div class="login__header">
-      <img src="./images/brain.png" alt="brain icon">
-      <h1>Memory Game</h1>
-    </div>
+    <form class="login-form-tdm" action="pages/game.html">
+        <div class="login-tdm">
+            <h1> Jogo da Memória</h1>            
+        </div>
 
-    <input type="text" placeholder="Name" class="login__input">
-    <button type="submit" class="login__button" disabled>Play</button>
-
-  </form>
+        <input type="text" placeholder="Nome" class="login-input">
+        <button type="submit" class="login-button" disabled> Começar </button>
+    </form>
 
 </body>
 </html>
